# wallet

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose.dev.yml  compose.frontend.yml  poe_tasks.toml  pyproject.toml
backend/: Dockerfile  README.md  poe_tasks.toml  pyproject.toml
backend/scripts/: __init__.py
backend/scripts/devex/: __init__.py  export_openapi.py  refresh_frontend_currency_meta.py  refresh_iso4217_currency_catalog.py  seed_sample_data.py
backend/scripts/devex/smoke/: __init__.py  common.py  run.py
backend/src/wallet/: config.py
backend/src/wallet/api/: __init__.py  app.py  deps.py  main.py  routes.py  schemas.py
backend/src/wallet/application/: __init__.py  accounts.py  cards.py  income_categories.py  spending_categories.py  transactions.py
backend/src/wallet/bootstrap/: __init__.py  sample_data.py  spending_categories.py
backend/src/wallet/domain/: __init__.py  _validation.py  accounts.py  cards.py  income_categories.py  spending_categories.py  transactions.py
backend/src/wallet/infrastructure/: __init__.py  memory.py
backend/src/wallet/ports/: __init__.py  accounts.py  cards.py  (+4 more)
backend/tests/: test_config.py  test_docs.py  test_export_openapi.py  test_package_surface.py  test_smoke_runner.py
backend/tests/api/: test_app.py  test_income_categories_api.py  test_spending_categories_api.py
backend/tests/application/: test_account_service.py  test_income_category_service.py  test_spending_category_service.py  test_transaction_service.py
backend/tests/bootstrap/: test_spending_categories_bootstrap.py
backend/tests/domain/: test_account_domain.py  test_income_category_domain.py  test_money.py  test_spending_category_domain.py  test_transaction_domain.py
backend/tests/infrastructure/: test_memory.py
backend/tests/use_cases/: test_card.py
(+103 files in other folders)
