[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "wallet"
version = "0.1.0"
description = "A money tracker designed for imperfect real-life tracking habits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
  "httpx2>=2.4.0",
  "mypy>=1.17.0,<1.19.0",
  "poethepoet>=0.32,<1",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wallet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poe]
include = "poe_tasks.toml"
